--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://www.youtube.com/user/IanH/videos">   
+        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/LIANYU-20-Piece-Silverware-Stainless-Dishwasher/dp/B06XK6PXX8/ref=pd_rhf_gw_s_pd_crcd_0_4?_encoding=UTF8&ie=UTF8&pd_rd_i=B06XK6PXX8&pd_rd_r=98RGTG7G3Y29EGMZ291Y&pd_rd_w=YsxXl&pd_rd_wg=uarka&pf_rd_p=c6269878-d677-4a89-a68c-ff0df2b6ce6c&pf_rd_r=98RGTG7G3Y29EGMZ291Y&pf_rd_r=98RGTG7G3Y29EGMZ291Y&pf_rd_s=recent-history-footer&pf_rd_t=gateway&psc=1&refRID=98RGTG7G3Y29EGMZ291Y">   
         <script type="text/javascript">
-               window.location.href = "https://www.youtube.com/user/IanH/videos"
+               window.location.href = "https://www.amazon.com/LIANYU-20-Piece-Silverware-Stainless-Dishwasher/dp/B06XK6PXX8/ref=pd_rhf_gw_s_pd_crcd_0_4?_encoding=UTF8&ie=UTF8&pd_rd_i=B06XK6PXX8&pd_rd_r=98RGTG7G3Y29EGMZ291Y&pd_rd_w=YsxXl&pd_rd_wg=uarka&pf_rd_p=c6269878-d677-4a89-a68c-ff0df2b6ce6c&pf_rd_r=98RGTG7G3Y29EGMZ291Y&pf_rd_r=98RGTG7G3Y29EGMZ291Y&pf_rd_s=recent-history-footer&pf_rd_t=gateway&psc=1&refRID=98RGTG7G3Y29EGMZ291Y"
         </script>
         <title>Page Redirection</title>
     </head>
